Flickers fixed
Fight the FOUC!

--- a/singularity/sass/partials/_colors.scss
+++ b/singularity/sass/partials/_colors.scss
@@ -1,5 +1,6 @@
 $almost_black: 			#222222;
 $dark_grey: 			#696969;
+$medium_grey:			#b5b5b5;
 $light_grey: 			#f1f1f1;
 $black: 				#000000;
 $orange:				#ff6600;
@@ -9,3 +10,4 @@ $subtext:				$dark_grey;
 $comment: 				$black;
 $background: 			$light_grey;
 $hn-orange: 			$orange;
+$visited: 				$medium_grey;
