--- a/singularity/sass/partials/_reset.scss
+++ b/singularity/sass/partials/_reset.scss
@@ -1,3 +1,4 @@
+// Reset Basic
 html, body, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, acronym, address, big, cite, code,
@@ -43,14 +44,3 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
-.default { font-family:SourceSansPro, Source Sans Pro; }
-.admin   { font-family:SourceSansPro, Source Sans Pro; }
-.title   { font-family:SourceSansPro, Source Sans Pro; }
-.adtitle { font-family:SourceSansPro, Source Sans Pro; }
-.subtext { font-family:SourceSansPro, Source Sans Pro; }
-.yclinks { font-family:SourceSansPro, Source Sans Pro; }
-.pagetop { font-family:SourceSansPro, Source Sans Pro; }
-.comhead { font-family:SourceSansPro, Source Sans Pro; }
-.comment { font-family:SourceSansPro, Source Sans Pro; }
-
